--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   
   <nav class="navbar navbar-expand-lg bg-primary navbar-dark py-3">
     <div class="container">
-      <a class="navbar-brand fw-bold" href="#">
+      <a class="navbar-brand fw-bold" href="index.html">
         <img src="img/logo.png" alt="Logo " height="80" class="me-2">
         Tienda
       </a>
@@ -41,7 +41,7 @@
           <li class="nav-item"><a class="nav-link" href="#">Ofertas</a></li>
           <li class="nav-item"><a class="nav-link" href="#">Contacto</a></li>
           <li class="nav-item">
-            <a class="btn btn-outline-light ms-lg-3" href="#">Ingresar</a>
+            <a class="btn btn-outline-light ms-lg-3" href="ingresar.html">Ingresar</a>
           </li>
         </ul>
       </div>
