--- a/ingresar.html
+++ b/ingresar.html
@@ -24,7 +24,7 @@
   
   <nav class="navbar navbar-expand-lg bg-primary navbar-dark py-3">
     <div class="container">
-      <a class="navbar-brand fw-bold" href="#">
+      <a class="navbar-brand fw-bold" href="index.html">
         <img src="img/logo.png" alt="Logo " height="80" class="me-2">
         Tienda
       </a>
