--- a/ingresar.html
+++ b/ingresar.html
@@ -41,7 +41,7 @@
           <li class="nav-item"><a class="nav-link" href="#">Ofertas</a></li>
           <li class="nav-item"><a class="nav-link" href="#">Contacto</a></li>
           <li class="nav-item">
-            <a class="btn btn-outline-light ms-lg-3" href="#">Ingresar</a>
+            <a class="btn btn-outline-light ms-lg-3" href="ingresar.html">Ingresar</a>
           </li>
         </ul>
       </div>
@@ -56,8 +56,8 @@
         <h5 class="text-primary mb-3">Inicia sesión ahora</h5>
         <form>
           <div class="mb-3 text-start">
-            <label for="username" class="form-label">Nombre de usuario</label>
-            <input type="text" class="form-control" id="username" placeholder="Ingresa tu usuario">
+            <label for="username" class="form-label">email</label>
+            <input type="email" class="form-control" id="username" placeholder="Ingresa tu Email">
           </div>
           <div class="mb-3 text-start">
             <label for="password" class="form-label">Contraseña</label>
@@ -68,10 +68,10 @@
         </form>
     
           <div class="col text-start">
-            <a href="registro.html">registrarme </a>
+            <a href="formulario.html">registrarme </a>
           </div>
           <div class="col text-end">
-            <a href="#">recuperar contraseña</a>
+            <a href="contaseña.html">recuperar contraseña</a>
           </div>
         </div>
        
