--- a/index.html
+++ b/index.html
@@ -24,11 +24,13 @@
   
   <nav class="navbar navbar-expand-lg bg-primary navbar-dark py-3">
     <div class="container">
+      <div class="logo-banner">
       <a class="navbar-brand fw-bold" href="index.html">
-        <img src="img/logo.png" alt="Logo " height="80" class="me-2">
+        <a class="navbar-brand fw-bold d-flex align-items-center" href="index.html"></a>
+        <img src="img/expertoobra_logo_transparent.png" alt="Logo " height="50" class="me-2">
         Tienda
       </a>
-
+      </div>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
               data-bs-target="#menuMain">
         <span class="navbar-toggler-icon"></span>
