--- a/index.html
+++ b/index.html
@@ -54,17 +54,19 @@
     <div class="carousel-inner">
 
       <div class="carousel-item active">
-        <img src="img/lindo.webp"
+        <img src="img/lindo.webp" style="height: 500px; object-fit: cover;"
              class="d-block w-100" alt="Bebés ">
         <div class="carousel-caption text-start">
+          <div class="text-white text-center mt-n3">
           <h5 class="text-uppercase">Bienvenido a Tienda  Bebé</h5>
           <h1 class="display-4 fw-bold">te brindamos todos nuestras productos de la mejor calidad </h1>
           <a href="#" class="btn btn-warning btn-lg">Ver mas</a>
         </div>
+        </div>
       </div>
 
       <div class="carousel-item">
-        <img src="img/recien.webp"
+        <img src="img/recien.webp" style="height: 500px; object-fit: cover;"
              class="d-block w-100" alt=" bebé">
         <div class="carousel-caption text-start">
           <h5 class="text-uppercase">servicios</h5>
@@ -74,7 +76,7 @@
       </div>
 
       <div class="carousel-item">
-        <img src="img/nacido.webp"
+        <img src="img/nacido.webp"style="height: 500px; object-fit: cover;"
              class="d-block w-100" alt="Juguetes para bebé">
         <div class="carousel-caption text-start">
           <h5 class="text-uppercase">Juguetes Seguros</h5>
