--- a/index.html
+++ b/index.html
@@ -24,10 +24,11 @@
   
   <nav class="navbar navbar-expand-lg bg-primary navbar-dark py-3">
     <div class="container">
-      <div class="logo-banner">
+      
       <a class="navbar-brand fw-bold" href="index.html">
         <a class="navbar-brand fw-bold d-flex align-items-center" href="index.html"></a>
-        <img src="img/expertoobra_logo_transparent.png" alt="Logo " height="50" class="me-2">
+        <div class="logo-banner">
+        <img src="img/logo2.png" alt="Logo " height="80px" class="me-2">
         Tienda
       </a>
       </div>
