--- a/ingresar.html
+++ b/ingresar.html
@@ -25,7 +25,7 @@
   <nav class="navbar navbar-expand-lg bg-primary navbar-dark py-3">
     <div class="container">
       <a class="navbar-brand fw-bold" href="index.html">
-        <img src="img/logo.png" alt="Logo " height="80" class="me-2">
+        <img src="img/logo2.png" alt="Logo " height="80" class="me-2">
         Tienda
       </a>
 
