--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
       <a class="navbar-brand fw-bold" href="index.html">
         <a class="navbar-brand fw-bold d-flex align-items-center" href="index.html"></a>
         <div class="logo-banner">
-        <img src="img/logo2.png" alt="Logo " height="80px" class="me-2">
-        Tienda
+        <img src="img/logo2.png" alt="Logo" class="me-1">
+    
       </a>
       </div>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
