--- a/ingresar.html
+++ b/ingresar.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+  <main>
   
   <div class="bg-dark text-white small py-1">
     <div class="container d-flex justify-content-end gap-3">
@@ -26,7 +27,7 @@
     <div class="container">
       <a class="navbar-brand fw-bold" href="index.html">
         <img src="img/logo2.png" alt="Logo " height="80" class="me-2">
-        Tienda
+        
       </a>
 
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -80,6 +81,8 @@
     </div>
    
   </div>
+</main>
+
   <footer class="bg-primary text-white py-4">
     <div class="container text-center">
       © 2025 Tienda Bebé. Todos los derechos reservados.
