--- a/contaseña.html
+++ b/contaseña.html
@@ -37,7 +37,7 @@
 
           <div class="collapse navbar-collapse" id="menuMain">
             <ul class="navbar-nav ms-auto">
-              <li class="nav-item"><a class="nav-link active" href="#">Inicio</a></li>
+              <li class="nav-item"><a class="nav-link active" href="index.html">Inicio</a></li>
               <li class="nav-item"><a class="nav-link" href="#">Productos</a></li>
               <li class="nav-item"><a class="nav-link" href="#">Ofertas</a></li>
               <li class="nav-item"><a class="nav-link" href="#">Contacto</a></li>
@@ -64,7 +64,9 @@
                 <label for="password" class="form-label">escriba su documento</label>
                 <input type="number" class="form-control" id="documento" placeholder="numero de documento ">
               </div>
-              
+              <div class="col text-start">
+            <a href="ingresar.html">-------<<<<   volver al inicio</a>
+  
               <button type="submit" class="btn btn-primary w-100">RECUPERAR</button>
             </form>
 
