--- a/formulario.html
+++ b/formulario.html
@@ -27,7 +27,7 @@
         <div class="container">
           <a class="navbar-brand fw-bold" href="index.html">
             <img src="img/logo2.png" alt="Logo " height="80" class="me-2">
-            Tienda
+          
           </a>
 
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -37,7 +37,7 @@
 
           <div class="collapse navbar-collapse" id="menuMain">
             <ul class="navbar-nav ms-auto">
-              <li class="nav-item"><a class="nav-link active" href="#">Inicio</a></li>
+              <li class="nav-item"><a class="nav-link active" href="index.html">Inicio</a></li>
               <li class="nav-item"><a class="nav-link" href="#">Productos</a></li>
               <li class="nav-item"><a class="nav-link" href="#">Ofertas</a></li>
               <li class="nav-item"><a class="nav-link" href="#">Contacto</a></li>
