--- a/ingresar.html
+++ b/ingresar.html
@@ -37,7 +37,7 @@
 
       <div class="collapse navbar-collapse" id="menuMain">
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link active" href="#">Inicio</a></li>
+          <li class="nav-item"><a class="nav-link active" href="index.html">Inicio</a></li>
           <li class="nav-item"><a class="nav-link" href="#">Productos</a></li>
           <li class="nav-item"><a class="nav-link" href="#">Ofertas</a></li>
           <li class="nav-item"><a class="nav-link" href="#">Contacto</a></li>
