--- a/contaseña.html
+++ b/contaseña.html
@@ -13,12 +13,12 @@
   <main>
   
       <div class="bg-dark text-white small py-1">
-        <div class="container d-flex justify-content-end gap-3">
+        <div class="container d-flex justify-content-start align-items-center">
           <span>Nuestras redes:</span>
-          <a href="#" class="text-white"><i class="bi bi-facebook"></i></a>
-          <a href="#" class="text-white"><i class="bi bi-instagram"></i></a>
-          <a href="#" class="text-white"><i class="bi bi-twitter-x"></i></a>
-          <a href="#" class="text-white"><i class="bi bi-linkedin"></i></a>
+          <a href="#" class="text-white"><i class="bi bi-facebook mx-2"></i></a>
+          <a href="#" class="text-white"><i class="bi bi-instagram mx-2"></i></a>
+          <a href="#" class="text-white"><i class="bi bi-twitter-x mx-2"></i></a>
+          <a href="#" class="text-white"><i class="bi bi-linkedin mx-2"></i></a>
         </div>
       </div>
 
