--- a/ingresar.html
+++ b/ingresar.html
@@ -19,6 +19,8 @@
       <a href="#" class="text-white"><i class="bi bi-instagram mx-2"></i></a>
       <a href="#" class="text-white"><i class="bi bi-twitter-x mx-2"></i></a>
       <a href="#" class="text-white"><i class="bi bi-linkedin mx-2"></i></a>
+      <span class="text-white fw-semibold me-2">Comunícate: +57 311 222 8877</span>
+</div>
     </div>
   </div>
 
