--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <a href="#" class="text-white"><i class="bi bi-instagram mx-2"></i></a>
       <a href="#" class="text-white"><i class="bi bi-twitter-x mx-2"></i></a>
       <a href="#" class="text-white"><i class="bi bi-linkedin mx-2"></i></a>
-       <span class="text-white fw-semibold me-2">Comunícate: +57 311 222 8877</span>
+      <span class="text-white fw-semibold me-2">Comunícate: +57 311 222 8877</span>
 </div>
       
     </div>
@@ -47,7 +47,7 @@
           <li class="nav-item"><a class="nav-link" href="#">Ofertas</a></li>
           <li class="nav-item"><a class="nav-link" href="#">Contacto</a></li>
           <li class="nav-item">
-            <a class="btn btn-outline-light ms-lg-3" href="ingresar.html">Ingresar</a>
+            <a class="btn btn-outline-light ms-lg-3" href="ingresar.html" style="background-color: #b94866;">Ingresar</a>
           </li>
         </ul>
       </div>
