--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           <div class="text-white text-center mt-n3">
           <h5 class="text-uppercase">Bienvenido a Tienda  Bebé</h5>
           <h1 class="display-4 fw-bold">te brindamos todos nuestras productos de la mejor calidad </h1>
-          <a href="#" class="btn btn-warning btn-lg">Ver mas</a>
+          <a href="#" class="btn btn-warning btn-lg" style="background-color: #b94866;">Ver mas</a>
         </div>
         </div>
       </div>
@@ -75,7 +75,7 @@
         <div class="carousel-caption text-start">
           <h5 class="text-uppercase">servicios</h5>
           <h1 class="display-4 fw-bold">tranquilidad y comodidad</h1>
-          <a href="#" class="btn btn-warning btn-lg">ver mas </a>
+          <a href="#" class="btn btn-warning btn-lg" style="background-color: #b94866;">ver mas </a>
         </div>
       </div>
 
@@ -85,7 +85,7 @@
         <div class="carousel-caption text-start">
           <h5 class="text-uppercase">Juguetes Seguros</h5>
           <h1 class="display-4 fw-bold">Desarrollo y diversión</h1>
-          <a href="#" class="btn btn-warning btn-lg">Comprar ahora</a>
+          <a href="#" class="btn btn-warning btn-lg" style="background-color: #b94866;">Comprar ahora</a>
         </div>
       </div>
     </div>
